# Holy-sheet

./: Cargo.toml  README.md
src/: app.rs  main.rs  web_view_mode.rs
src/pages/: configurations_page.rs  edit_page.rs  main_page.rs  markdown_viewer.rs  mod.rs  page_one.rs  page_three.rs  page_two.rs
src/pages/style/: dark_theme.css  style.css
tests/: test_edit_page.rs  test_markdown_viewer.rs
